# DopolnitelnaDomashna

./: CMakeLists.txt  README.md  color.hpp  main.cpp  vec3.cpp  vec3.hpp
include/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  material.hpp  moving_sphere.hpp  perlin.hpp  random.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  texture.hpp  vec3.hpp
src/: aabb.cpp  bvh.cpp  camera.cpp  dielectric.cpp  hittable_list.cpp  lambertian.cpp  main.cpp  metal.cpp  moving_sphere.cpp  perlin.cpp  ray.cpp  sphere.cpp  texture.cpp  vec3.cpp
